<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">AutoApp</string>
    <string name="driver_profile_picture">Driver profile picture</string>
    <string name="background">background</string>
    <string name="select_a_driver">Choose a driver</string>
    <string name="store">store</string>
    <string name="app">App</string>
    <string name="settings">settings</string>
    <string name="map">map</string>
    <string name="album_art">album art</string>
    <string name="song_name">Song Name</string>
    <string name="artist_name">Artist Name</string>
    <string name="previous">previous</string>
    <string name="play_pause">play pause</string>
    <string name="next">next</string>
    <string name="volume">volume</string>
    <string name="favourite">favourite</string>
    <string name="work_in_progress">Work in progress…</string>
    <string name="label_play">Play</string>
    <string name="label_pause">Pause</string>
    <string name="label_next">Next</string>
    <string name="label_previous">Previous</string>
    <string name="hvac_temperature_template"><xliff:g id="temperature">%1$s</xliff:g>&#x00B0;</string>
    <string name="fan_speed_max">MAX</string>
    <string name="fan_speed_off">OFF</string>
    <string name="hvac_invalid_temperature">--</string>
    <string name="hvac_temperature_off">OFF</string>
    <string name="source">Source</string>
    <string name="left_temp_increase">left temp increase</string>
    <string name="left_temp_decrease">left temp decrease</string>
    <string name="fifty">50</string>
    <string name="ac_auto_button">AC Auto Button</string>
    <string name="fan_direction_1">fan_direction_1</string>
    <string name="fan_direction_2">fan_direction_2</string>
    <string name="fan_direction_3">fan_direction_3</string>
    <string name="fan_direction_4">fan_direction_4</string>
    <string name="temperature_increase_button">temperature increase button</string>
    <string name="temperature_decrease_button">temperature decrease button</string>
    <string name="play_item">Play item</string>
    <string name="contacts">Contacts: </string>
    <string name="no_contacts">No contacts are saved yet!</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_apps">Search for installed apps</string>
</resources>
