<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_marginEnd="10dp"
    android:layout_marginStart="10dp"
    android:layout_height="match_parent">


    <android.support.v7.widget.CardView
        android:id="@+id/cv_song_container"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:elevation="2dp"
        app:cardElevation="2dp">

        <LinearLayout
            android:id="@+id/imageLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="top"
            android:weightSum="2">

            <ImageView
                android:id="@+id/iv_song_art"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.3"
                android:scaleType="centerCrop"
                android:adjustViewBounds="false"
                tools:src="@tools:sample/backgrounds/scenic"
                android:src="@drawable/ic_play_arrow_black_36dp"
                android:contentDescription="@string/album_art" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                android:layout_weight="1.7">

            <TextView
                android:id="@+id/tv_trackname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="2dp"
                android:text="@string/song_name"
                android:textSize="14sp"
                android:lines="1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_trackdesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="2dp"
                tools:text="@tools:sample/full_names"
                android:text="@string/artist_name"
                android:textSize="12sp"
                android:lines="1" />
            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>
</FrameLayout>