<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#22FFFFFF"
    android:paddingBottom="16dp">

    <FrameLayout
        android:id="@+id/hvac_center_panel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_row"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout4"
        app:layout_constraintStart_toEndOf="@+id/linearLayout3"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/fan_control_bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/hvac_panel_row_margin"
            android:alpha="0"
            android:background="@drawable/hvac_panel_button_bg" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/temperature_bar_background"
        android:backgroundTint="@color/temperature_5"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            style="@style/HvacTemperatureControlIcon"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:contentDescription="@string/left_temp_increase"
            android:src="@drawable/ic_increase_icon" />

        <TextView
            android:id="@+id/tv_left_temperature_text"
            style="@style/HvacTemperature"
            android:layout_gravity="center"
            android:text="@string/fifty" />

        <ImageView
            style="@style/HvacTemperatureControlIcon"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:contentDescription="@string/left_temp_decrease"
            android:src="@drawable/ic_decrease_icon" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/temperature_bar_background"
        android:backgroundTint="@color/temperature_5"
        android:orientation="vertical"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            style="@style/HvacTemperatureControlIcon"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:contentDescription="@string/left_temp_increase"
            android:src="@drawable/ic_increase_icon" />

        <TextView
            android:id="@+id/tv_right_temperature_text"
            style="@style/HvacTemperature"
            android:layout_gravity="center"
            android:text="@string/fifty" />

        <ImageView
            style="@style/HvacTemperatureControlIcon"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:contentDescription="@string/left_temp_decrease"
            android:src="@drawable/ic_decrease_icon" />

    </LinearLayout>

    <com.example.autoapp.customclass.HvacPanelRow
        android:id="@+id/linearLayout5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ic_fan_speed_bg"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/ac_button"
        app:layout_constraintStart_toEndOf="@+id/recycle_air_button"
        app:layout_constraintTop_toTopOf="@id/hvac_center_panel">


        <!--<android.support.constraint.ConstraintLayout-->
        <!--android:id="@+id/segment_container"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="@dimen/hvac_fan_speed_bar_height"-->
        <!--android:layout_marginStart="@dimen/hvac_fan_speed_bar_margin"-->
        <!--android:layout_marginEnd="@dimen/hvac_fan_speed_bar_margin"-->
        <!--android:background="@drawable/fan_speed_inset"-->
        <!--android:orientation="horizontal">-->

        <!--<TextView-->
        <!--android:id="@+id/fan_off"-->
        <!--style="@style/HvacFanSpeedText"-->
        <!--android:layout_marginStart="@dimen/hvac_fan_speed_bar_end_button_margin"-->
        <!--android:layout_marginEnd="@dimen/hvac_fan_speed_bar_segment_margin"-->
        <!--android:text="@string/fan_speed_off"-->
        <!--app:layout_constraintEnd_toStartOf="@+id/fan_speed_1"-->
        <!--app:layout_constraintHorizontal_bias="0.5"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent"-->
        <!--tools:layout_editor_absoluteY="20dp" />-->

        <!--<com.example.autoapp.customclass.FanSpeedBarSegment-->
        <!--android:id="@+id/fan_speed_1"-->
        <!--style="@style/HvacFanSpeedBar"-->
        <!--app:layout_constraintEnd_toStartOf="@+id/fan_speed_2"-->
        <!--app:layout_constraintHorizontal_bias="0.5"-->
        <!--app:layout_constraintStart_toEndOf="@+id/fan_off"-->
        <!--app:layout_constraintTop_toTopOf="parent"-->
        <!--tools:layout_editor_absoluteY="20dp" />-->

        <!--<com.example.autoapp.customclass.FanSpeedBarSegment-->
        <!--android:id="@+id/fan_speed_2"-->
        <!--style="@style/HvacFanSpeedBar"-->
        <!--app:layout_constraintEnd_toStartOf="@+id/fan_speed_3"-->
        <!--app:layout_constraintHorizontal_bias="0.5"-->
        <!--app:layout_constraintStart_toEndOf="@+id/fan_speed_1"-->
        <!--app:layout_constraintTop_toTopOf="parent"-->
        <!--tools:layout_editor_absoluteY="20dp" />-->

        <!--<com.example.autoapp.customclass.FanSpeedBarSegment-->
        <!--android:id="@+id/fan_speed_3"-->
        <!--style="@style/HvacFanSpeedBar"-->
        <!--app:layout_constraintEnd_toStartOf="@+id/fan_speed_4"-->
        <!--app:layout_constraintHorizontal_bias="0.5"-->
        <!--app:layout_constraintStart_toEndOf="@+id/fan_speed_2"-->
        <!--app:layout_constraintTop_toTopOf="parent"-->
        <!--tools:layout_editor_absoluteY="20dp" />-->

        <!--<com.example.autoapp.customclass.FanSpeedBarSegment-->
        <!--android:id="@+id/fan_speed_4"-->
        <!--style="@style/HvacFanSpeedBar"-->
        <!--app:layout_constraintEnd_toStartOf="@+id/fan_max"-->
        <!--app:layout_constraintHorizontal_bias="0.5"-->
        <!--app:layout_constraintStart_toEndOf="@+id/fan_speed_3"-->
        <!--app:layout_constraintTop_toTopOf="parent"-->
        <!--tools:layout_editor_absoluteY="20dp" />-->

        <!--<TextView-->
        <!--android:id="@+id/fan_max"-->
        <!--style="@style/HvacFanSpeedText"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--android:text="@string/fan_speed_max"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintHorizontal_bias="0.5"-->
        <!--app:layout_constraintStart_toEndOf="@+id/fan_speed_4"-->
        <!--app:layout_constraintTop_toTopOf="parent"-->
        <!--tools:layout_editor_absoluteY="20dp" />-->
        <!--</android.support.constraint.ConstraintLayout>-->

        <com.example.autoapp.customclass.FanSpeedBar
            android:id="@+id/fan_speed_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/hvac_fan_speed_top_margin" />

        <com.example.autoapp.customclass.FanDirectionButtons
            android:id="@+id/fan_direction_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="@dimen/hvac_panel_fan_direction_margin"
            android:layout_marginEnd="@dimen/hvac_panel_fan_direction_margin"
            android:layout_marginBottom="@dimen/hvac_panel_fan_direction_margin" />

    </com.example.autoapp.customclass.HvacPanelRow>

    <com.example.autoapp.customclass.ToggleButton
        android:id="@+id/recycle_air_button"
        android:layout_width="@dimen/hvac_panel_button_dimen"
        android:layout_height="@dimen/hvac_panel_group_height"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/hvac_panel_button_bg"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout5"
        app:layout_constraintStart_toEndOf="@+id/linearLayout3"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.autoapp.customclass.ToggleButton
        android:id="@+id/ac_button"
        android:layout_width="@dimen/hvac_panel_button_dimen"
        android:layout_height="@dimen/hvac_panel_group_height"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/hvac_panel_button_bg"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="@+id/view_separator"
        app:layout_constraintEnd_toStartOf="@id/linearLayout4"
        app:layout_constraintStart_toEndOf="@+id/linearLayout5"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@id/linearLayout5" />

    <com.example.autoapp.customclass.HvacPanelRow
        android:id="@+id/bottom_row"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/hvac_panel_margin"
        android:layout_marginTop="@dimen/hvac_panel_margin"
        android:layout_marginEnd="@dimen/hvac_panel_margin"
        android:alpha="1"
        android:translationY="@dimen/hvac_panel_row_animation_height_shift"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout4"
        app:layout_constraintStart_toEndOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@id/view_separator">

        <com.example.autoapp.customclass.SeatWarmerButton
            android:id="@+id/left_seat_heater"
            style="@style/HvacButton"
            android:layout_marginEnd="@dimen/hvac_panel_margin"
            android:src="@drawable/ic_seat_heat_off" />

        <com.example.autoapp.customclass.ToggleButton
            android:id="@+id/front_defroster"
            style="@style/HvacButton"
            android:layout_marginEnd="@dimen/hvac_panel_margin"
            android:background="@drawable/hvac_panel_button_bg"
            android:padding="5dp" />

        <ImageView
            android:id="@+id/auto_button"
            style="@style/HvacButton"
            android:layout_width="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/hvac_panel_button_bg"
            android:scaleType="center"
            android:src="@drawable/ic_auto_off"
            android:contentDescription="@string/ac_auto_button" />

        <com.example.autoapp.customclass.ToggleButton
            android:id="@+id/rear_defroster"
            style="@style/HvacButton"
            android:layout_marginStart="@dimen/hvac_panel_margin"
            android:background="@drawable/hvac_panel_button_bg"
            android:padding="5dp" />

        <com.example.autoapp.customclass.SeatWarmerButton
            android:id="@+id/right_seat_heater"
            style="@style/HvacButton"
            android:layout_marginStart="@dimen/hvac_panel_margin"
            android:src="@drawable/ic_seat_heat_off" />
    </com.example.autoapp.customclass.HvacPanelRow>

</android.support.constraint.ConstraintLayout>